[GUVNOR-2166] drools-wb-webapp: don't build all GWT permutations
 * the "full" profile was there just for running
   all the permutations, so it was removed too